meer checkboxes layout

--- a/app/assets/stylesheets/includes/tweaks.scss
+++ b/app/assets/stylesheets/includes/tweaks.scss
@@ -45,8 +45,8 @@ textarea#notes
 	{
 		a[href*="//"]:after
 		{
-			content: url('/icons/box-arrow-up-right.svg');
-			margin-left:3px;
+//			content: url('/icons/box-arrow-up-right.svg');
+//			margin-left:3px;
 		}
 	}	
 }
