--- a/app/views/application/_brand.html.erb
+++ b/app/views/application/_brand.html.erb
@@ -1,7 +1,7 @@
 <%# min-width:0 is to allow the div to dictate the width for flexboxed children %>
 <a href="/" class="navbar-brand d-flex align-items-center" style="min-width:0;">
 	
-	<%= icon "terminal", class: "pull-left bg-warning rounded mr-2 flex-shrink-0", size: '32x32', style: 'vertical-align:bottom;' %>
+	<%#= icon "terminal", class: "pull-left bg-warning rounded mr-2 flex-shrink-0", size: '32x32', style: 'vertical-align:bottom;' %>
 
 	<div id="course-title" class="d-flex flex-column font-weight-bold text-truncate">
 		<%= Course.long_name %>
