--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -3,23 +3,24 @@
 #sidebar
 {
 	padding: 0;
-    overflow-y: auto;
+	overflow-y: auto;
 	width: 100%;
+	font-size: 0.9rem;
 }
 
 #sidebar-tools
 {
 	width: 100%;
-	padding: 0.5rem;
+	padding: 1rem;
 
-    display:flex;
+	display:flex;
 	-webkit-box-pack: justify !important;
 	justify-content: space-between !important;
 }
 
 .navbar-brand
 {
-    line-height:normal;
+	line-height:normal;
 	padding:0;
 }
 
@@ -37,7 +38,7 @@
 
 #course-name
 {
-    font-weight:bold;
+	font-weight:bold;
 	line-height:1.1;
 }
 
@@ -49,7 +50,8 @@
 
 #sidebar-content
 {
-	padding: 1rem;
+//	padding: 1rem;
+	padding-top: 0;
 }
 
 
@@ -58,6 +60,12 @@
 	#sidebar-tools
 	{
 		background-color:#C2CBD9;
+	}
+	
+	#sidebar .nav
+	{
+		padding-left:.75rem;
+		padding-right:.75rem;
 	}
 	
 	#schedule-navbar-items
@@ -81,34 +89,35 @@
 
 @media (min-width: 768px)
 {
-    #sidebar
-    {
+	#sidebar
+	{
 		display: block;
-        position: fixed;
-        top: 0;
-        bottom: 0;
+		position: fixed;
+		top: 0;
+		bottom: 0;
 		
 		-webkit-box-flex: 0;
 		flex: 0 0 33.3333333333%;
 		max-width: 33.3333333333%;
-    }
-    
-    #sidebar .sidebar-collapse
-    {
-        display:flex;
-        flex-direction:column;
-    }
-	
-	#sidebar-tools
+	}
+
+	#sidebar .sidebar-collapse
 	{
-		padding: 1rem;
+		display:flex;
+		flex-direction:column;
 	}
 	
-    // can be in sidebar or in navbar (latter is in full-width layout)
-    .navbar-toggler
-    {
-        display: none;
-    }
+	#sidebar-tools, #sidebar .nav
+	{
+		padding-left:.75rem;
+		padding-right:.75rem;
+	}
+	
+	// can be in sidebar or in navbar (latter is in full-width layout)
+	.navbar-toggler
+	{
+		display: none;
+	}
 	
 	#schedule-navbar-items > *
 	{
@@ -119,16 +128,16 @@
 
 @media (min-width: 992px)
 {
-	#sidebar-tools
+	#sidebar-tools, #sidebar .nav
 	{
-		padding: 1.5rem;
-		padding-left: 1.5rem;
-		padding-right: 1.5rem;
+		padding-left:1rem;
+		padding-right:1rem;
 	}
 	
 	#sidebar-content
 	{
-		padding: 1rem 1.5rem;
+//		padding: 0 1.5rem 1rem 1.5rem;
+		paddding:0;
 	}
 }
 
@@ -138,72 +147,123 @@
 	{
 		-webkit-box-flex: 0;
 		flex: 0 0 25%;
-		max-width: 25%;
+		//max-width: 25%;
+	}
+	
+	#sidebar-tools, #sidebar .nav
+	{
+//		padding-left:1.5rem;
+//		padding-right:1.5rem;
 	}
 }
 
 //****************************************************************************
 
+#sidebar #course-links
+{
+	width: 100%;
+}
+
+#sidebar #course-links .bg-light
+{
+	background-color: transparent !important; //#D7DDE3 !important;
+}
+
+#sidebar .nav#course-links
+{
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row!important;
+}
+
+#sidebar .nav#course-links li
+{
+	margin-right:1rem;
+}
+
+#sidebar .nav#course-links li:first-child
+{
+	margin-left:0;
+}
+
 #sidebar .nav
 {
-    // damn flexbox so flexible
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-    width: 100%;
-    flex-direction: column;
+	// damn flexbox so flexible
+	flex-wrap: nowrap;
+	flex-shrink: 0;
+	width: 100%;
+	flex-direction: column;
 }
 
-#sidebar a.nav-link {
-    @extend .px-0;
+#sidebar a.nav-link
+{
+	@extend .px-0;
+	color:#555;
 }
 
-#sidebar a.nav-link.disabled {
-    font-weight:600;
+#sidebar a.nav-link:hover
+{
+	background-color:#DFE3E6;
+}
+
+#sidebar a.nav-link:hover
+{
+	color:#235A9E;
+}
+
+#sidebar a.nav-link.disabled
+{
+	font-weight:600;
 }
 
 #sidebar h2
 {
-    font-size:.7rem;
-    text-transform: uppercase;
-    color:gray;
+	font-size:.7rem;
+	text-transform: uppercase;
+	color:gray;
 }
 
 #sidebar .nav-text
 {
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size: 14px;
 }
 
 #sidebar p.nav-text, #sidebar ul a
 {
-    padding-top:0.35em;
-    padding-bottom:0.35em;
+	padding-top:0.35rem;
+	padding-bottom:0.35rem;
 }
 
 #sidebar p.nav-text, #sidebar a.dropdown-toggle {
-    margin:0;
-    color:#a5a5a5;
+	margin:0.15rem 0 0.15rem 0;
+	color:#a5a5a5;
 }
 
 #sidebar-content > ul
 {
-    margin-top:1.5rem;
+	margin-top:0.75rem;
+	padding-top:.75rem;
+	padding-bottom:.75rem;
+	border-top:1px solid #e1e1e1;
 }
 
 #sidebar-content > ul:first-child
 {
 	margin-top:0;
+	padding-top:0;
+	border-top:0;
 }
 
 #sidebar > * > .nav
 {
-//    padding-bottom:2rem;
+	//    padding-bottom:2rem;
 }
 
 #sidebar ul.nav > li > ul.nav > li > ul.nav
 {
-    padding-left:1em;
+	padding-left:1em;
 }
 
 #sidebar ul#sections
@@ -223,76 +283,76 @@
 {
 	text-align:center;
 	margin-right:0.25em;
-    width:1.25rem;
-    height:1rem;
+	width:1.25rem;
+	height:1rem;
 }
 
 #sidebar .fa-chevron-circle-left, #sidebar .fa-chevron-circle-right
 {
-    text-align:right;
+	text-align:right;
 }
 
 //****************************************************************************
 
 #icon-nav
 {
-    //    position:-webkit-sticky;
-        top:0;
-        z-index:1000;
+	//    position:-webkit-sticky;
+	top:0;
+	z-index:1000;
 }
 
 #icon-nav .nav-item
 {
-    margin-left:.5rem;
+	margin-left:.5rem;
 }
 
 #icon-nav .dropdown-item .fa
 {
-    width:1.5rem;
+	width:1.5rem;
 }
 
 #icon-nav .form-check
 {
-    padding-left:.25rem;
+	padding-left:.25rem;
 }
 
 #icon-nav .register-menu
 {
-    min-width:400px;
+	min-width:400px;
 }
 
 //****************************************************************************
 
 #ama-nav .dropdown-menu
 {
-    min-width:300px;
+	min-width:300px;
 }
 
 //****************************************************************************
 
 #search-nav .dropdown-menu
 {
-    width:500px;
-    background-color:#F2F8FF;
+	width:500px;
+	background-color:#F2F8FF;
 }
 
 #search-content img
 {
-    max-width:100%;
+	max-width:100%;
 }
 
 #search-menu
 {
-    border-color:#3B6999;
-    padding-top:2em;
+	border-color:#3B6999;
+	padding-top:2em;
 }
 
 @media (min-width: 768px)
 {
-    #search-bar
-    {
-        position: fixed;
-    }
+	#search-bar
+	{
+		position: fixed;
+	}
 }
 
 #user-menu a
