--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -2,7 +2,7 @@
 
 body
 {
-	background-color:#fffefe;
+	background-color:#f8f9fa;
 }
 
 body.boxes
@@ -29,7 +29,7 @@ body.boxes
 //background: linear-gradient(90deg, rgba(124,187,232,0.5032387955182073) 0%, rgba(217,218,216,0.1474964985994398) 100%);
 background: rgb(181,206,223);
 //background: linear-gradient(90deg, rgba(181,206,223,0.14637605042016806) 0%, rgba(200,218,223,0.1474964985994398) 100%);
-background: linear-gradient(133deg, rgba(181,206,223,0.24637605042016806) 0%, rgba(183,184,183,0.1474964985994398) 40%);
+background: linear-gradient(133deg, rgba(181,206,223,0.34637605042016806) 0%, rgba(183,184,183,0.1474964985994398) 80%);
 	
 }
 
@@ -45,7 +45,7 @@ background: linear-gradient(133deg, rgba(181,206,223,0.24637605042016806) 0%, rg
 {
 	#sidebar
 	{
-		border-right:1px solid #D3D7DA;
+		border-right:1px solid #E9ECF3;
 	}
 }
 
