--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="dropdown ml-2">
-	<a href="#" class="bg-light rounded-pill p-2 dropdown-toggle" data-toggle="dropdown"><%= icon 'person-fill', size: '24x24', style: 'vertical-align:-6px;' %></a>
+	<a href="#" class="rounded-pill px-2 py-1 dropdown-toggle d-inline-block h-100" style="background-color:#DBE6EC" data-toggle="dropdown"><%= icon 'person-fill', size: '24x24', style: 'vertical-align:-6px;' %></a>
 	<% if authenticated? %>
 	<div class="dropdown-menu dropdown-menu-right" id="user-menu">
 		<%= render partial: 'menu_items' %>
