--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -68,11 +68,11 @@
 		<ul class="nav">
 			<li>
 				<p class="nav-text">
-					<span id="schedule_name" class="text-dark"><%= @current_module.name %></span>
+					<span id="schedule_name"><%= @current_module.name %></span>
 					<% if current_schedule.self_service %>
-					<span class="float-right">
-						<%= link_to bootstrap_icon('chevron-left').html_safe, profile_prev_path, method: :post, remote: true %>
-						<%= link_to bootstrap_icon('chevron-right', class: 'mr-n1').html_safe, profile_next_path, method: :post, remote: true %>
+					<span class="float-right mr-n1 spr-1">
+						<%= link_to bootstrap_icon('chevron-left', class: 'rounded').html_safe, profile_prev_path, method: :post, remote: true %>
+						<%= link_to bootstrap_icon('chevron-right', class: 'rounded').html_safe, profile_next_path, method: :post, remote: true %>
 					</span>
 					<% end %>
 				</p>
