--- a/app/views/profile/schedule.js.erb
+++ b/app/views/profile/schedule.js.erb
@@ -1,3 +1,3 @@
 document.querySelector("#schedule_name").innerHTML = "<%= current_module && current_module.name || '' %>";
 document.querySelector("#schedule").innerHTML = "<%= escape_javascript current_module && links_to_ul(current_module.content) || '' %>";
-document.querySelector("#schedule").highlight_briefly();
+document.querySelector("#schedule_name").highlight_briefly();
