--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -171,9 +171,9 @@
 	width: 100%;
 }
 
-#sidebar #course-links .bg-light
+#sidebar #course-links .bi
 {
-	sbackground-color: transparent !important; //#D7DDE3 !important;
+	vertical-align:-0.35em;
 }
 
 #sidebar .nav#course-links
