--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			
-			<div id="sidebar" class="navbar navbar-light d-md-flex align-items-stretch flex-column flex-shrink-0 col-md-<%= Settings.room_for_toc && 4 || 4 %> col-xl-4">
+			<div id="sidebar" class="navbar navbar-light d-md-flex align-items-stretch flex-column flex-shrink-0 col-md-<%= Settings.room_for_toc && 4 || 4 %> col-xl-4 align-items-stretch" data-turbolinks-permanent>
 				<%= render 'sidebar' %>
 			</div>
 			
