--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,136 +1,133 @@
-<div class="collapse sidebar-collapse navbar-collapse multi-collapse show align-items-stretch" data-turbolinks-permanent>
+<div id="sidebar-tools" class="flex-shrink-0">
+	<%= render 'brand'%>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+</div>
 
-	<div id="sidebar-tools" class="flex-shrink-0">
-		<%= render 'brand'%>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	</div>
 
-	<% if Settings['keyword_index'].present? %>
-	<div class="collapse multi-collapse" id="multiCollapseExample2">
-		<div class="d-flex align-items-center">
-			<form class="form-inline w-100">
-				<small class="ml-1">Find resources by keyword:</small>
-				<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="" aria-label="Enter topic name">
-			</form>
-			<a class="ml-3" data-toggle="collapse" data-target=".multi-collapse" href="#" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-				x</a>
-			</div>
-					
-			<%= render 'search/search' %>
-		</div>
+<div id="course-links" class="flex-shrink-0">
+	<div class="row row-cols-6 row-cols-sm-6 row-cols-md-4 row-cols-lg-5 row-cols-xl-6 m-0 m-lg-1">
+		<% if logged_in? && alerts_for_current_schedule.any? %>
+		<div><a href="/announcements" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'bell-fill' %><br><small><%= t(:announcements) %></small></a></div>
 		<% end %>
+		<% if logged_in? && current_user.submits.any? %>
+		<div><a href="/submissions" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'kanban' %><br><small><%= t(:submissions) %></small></a></div>
+		<% end %>
+		<% if current_schedule.page %>
+		<div><a href="/syllabus" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'calendar' %><br><small><%= t(:syllabus) %></small></a></div>
+		<% end %>
+		<% Course.links.each do |title, url|  %>
+		<div><%= link_to insert_icon(title).html_safe, url, class:"d-block w-100 w-100 text-center text-truncate p-1 rounded" %></div>
+		<% end %>
+	</div>
+</div>
+
+<% if Settings['keyword_index'].present? %>
+<div class="collapse multi-collapse" id="multiCollapseExample2">
+	<div class="d-flex align-items-center">
+		<form class="form-inline w-100">
+			<small class="ml-1">Find resources by keyword:</small>
+			<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="" aria-label="Enter topic name">
+		</form>
+		<a class="ml-3" data-toggle="collapse" data-target=".multi-collapse" href="#" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+			x</a>
+		</div>
 				
-	<%# User registration form %>
-	
-	<% if authenticated? && !current_user.valid_profile? && Schedule.default.present? %>
-	<div class="card mt-3">
-		<%= render 'profile/edit' %>
+		<%= render 'search/search' %>
 	</div>
 	<% end %>
-	
-	<%# Main navigation%>
-	
-	<div id="course-links" class="flex-shrink-0">
-		<div class="row row-cols-6 row-cols-sm-6 row-cols-md-3 row-cols-lg-5 m-0 m-lg-1">
-			<% if logged_in? && alerts_for_current_schedule.any? %>
-			<div><a href="/announcements" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'bell-fill' %><br><small><%= t(:announcements) %></small></a></div>
-			<% end %>
-			<% if logged_in? && current_user.submits.any? %>
-			<div><a href="/submissions" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'kanban' %><br><small><%= t(:submissions) %></small></a></div>
-			<% end %>
-			<% if current_schedule.page %>
-			<div><a href="/syllabus" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'calendar' %><br><small><%= t(:syllabus) %></small></a></div>
-			<% end %>
-			<% Course.links.each do |title, url|  %>
-			<div><%= link_to insert_icon(title).html_safe, url, class:"d-block w-100 w-100 text-center text-truncate p-1 rounded" %></div>
-			<% end %>
-		</div>
-	</div>
+			
+<%# User registration form %>
 
-	<div id="sidebar-content" class="sidebar-scroller flex-grow-1 turbolinks-disable-scroll collapse">
+<% if authenticated? && !current_user.valid_profile? && Schedule.default.present? %>
+<div class="card mt-3">
+	<%= render 'profile/edit' %>
+</div>
+<% end %>
 
-		<% if Course.modules.any? %>
-		<ul class="nav">
-			<li>
-				<p class="nav-text"><%= @current_module ? t(:other) : t(:modules) %></p>
-			</li>
-			<% Course.modules.each do |title, url|  %>
-			<li><%= link_to title.html_safe, url, class:"nav-link" %></li>
-			<% end %>
-		</ul>
+<%# Main navigation%>
+
+<div id="sidebar-content" class="sidebar-collapse sidebar-scroller flex-grow-1 turbolinks-disable-scroll collapse">
+
+	<% if Course.modules.any? %>
+	<ul class="nav">
+		<li>
+			<p class="nav-text"><%= @current_module ? t(:other) : t(:modules) %></p>
+		</li>
+		<% Course.modules.each do |title, url|  %>
+		<li><%= link_to title.html_safe, url, class:"nav-link" %></li>
 		<% end %>
-	
-		<%# Schedule-based navigation %>
+	</ul>
+	<% end %>
 
-		<% if current_module %>
-		<ul class="nav">
-			<li>
-				<p class="nav-text">
-					<span id="schedule_name"><%= @current_module.name %></span>
-					<% if current_schedule.self_service %>
-					<span class="float-right mr-n1 spr-1">
-						<%= link_to bootstrap_icon('chevron-left', class: 'rounded').html_safe, profile_prev_path, method: :post, remote: true %>
-						<%= link_to bootstrap_icon('chevron-right', class: 'rounded').html_safe, profile_next_path, method: :post, remote: true %>
-					</span>
-					<% end %>
-				</p>
-			</li>
-			<li id="schedule">
-				<%= links_to_ul(@current_module.content) %>
-			</li>
-		</ul>
+	<%# Schedule-based navigation %>
+
+	<% if current_module %>
+	<ul class="nav">
+		<li>
+			<p class="nav-text">
+				<span id="schedule_name"><%= @current_module.name %></span>
+				<% if current_schedule.self_service %>
+				<span class="float-right mr-n1 spr-1">
+					<%= link_to bootstrap_icon('chevron-left', class: 'rounded').html_safe, profile_prev_path, method: :post, remote: true %>
+					<%= link_to bootstrap_icon('chevron-right', class: 'rounded').html_safe, profile_next_path, method: :post, remote: true %>
+				</span>
+				<% end %>
+			</p>
+		</li>
+		<li id="schedule">
+			<%= links_to_ul(@current_module.content) %>
+		</li>
+	</ul>
+	<% end %>
+
+	<script>
+		// clear cache whenever the schedule is changed by user
+		$(document).on('ajax:before', '[data-remote]', () => {
+			Turbolinks.clearCache();
+		});
+	</script>
+
+	<%# Navigation items from section that current page belongs to %>
+
+	<% if !current_module && @section.present? && @section.content_links.present? %>
+	<ul class="nav">
+		<li>
+			<p class="nav-text"><%= @section.title %></p>
+		</li>
+		<li>
+			<%= links_to_ul(@section.content_links) %>
+		</li>
+	</ul>
+	<% end %>
+
+	<%# All pages by section, but users only see "published" pages here %>
+
+	<% if current_sections.any? %>
+	<ul id="sections" class="nav">
+		<li>
+			<p class="nav-text"><%= @current_module ? t(:other) : t(:materials) %></p>
+		</li>
+		<li>
+			<ul class="nav materials">
+				<%= material_links_to_li(current_sections) %>
+			</ul>
+		</li>
+	</ul>
+	<% end %>
+
+	<%# User menu items are shown in sidebar on small screens %>
+
+	<ul id="user-menu-sidebar" class="nav d-md-none">
+		<li>
+			<p class="nav-text">Menu</p>
+		</li>
+		<% if !authenticated? %>
+		<li><%= link_to("Sign in".html_safe, session_login_path, class:"nav-link", data: { turbolinks: false })%></li>
+		<% elsif logged_in? %>
+		<%= render partial: 'menu_items' %>
 		<% end %>
-	
-		<script>
-			// clear cache whenever the schedule is changed by user
-			$(document).on('ajax:before', '[data-remote]', () => {
-				Turbolinks.clearCache();
-			});
-		</script>
-
-		<%# Navigation items from section that current page belongs to %>
-
-		<% if !current_module && @section.present? && @section.content_links.present? %>
-		<ul class="nav">
-			<li>
-				<p class="nav-text"><%= @section.title %></p>
-			</li>
-			<li>
-				<%= links_to_ul(@section.content_links) %>
-			</li>
-		</ul>
-		<% end %>
-
-		<%# All pages by section, but users only see "published" pages here %>
-
-		<% if current_sections.any? %>
-		<ul id="sections" class="nav">
-			<li>
-				<p class="nav-text"><%= @current_module ? t(:other) : t(:materials) %></p>
-			</li>
-			<li>
-				<ul class="nav materials">
-					<%= material_links_to_li(current_sections) %>
-				</ul>
-			</li>
-		</ul>
-		<% end %>
-
-		<%# User menu items are shown in sidebar on small screens %>
-
-		<ul id="user-menu-sidebar" class="nav d-md-none">
-			<li>
-				<p class="nav-text">Menu</p>
-			</li>
-			<% if !authenticated? %>
-			<li><%= link_to("Sign in".html_safe, session_login_path, class:"nav-link", data: { turbolinks: false })%></li>
-			<% elsif logged_in? %>
-			<%= render partial: 'menu_items' %>
-			<% end %>
-		</ul>
-	
-	</div>
+	</ul>
 
 </div>
