--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -64,6 +64,12 @@
 	border-bottom:none;
 }
 
+#sidebar-tools
+{
+	background-color:rgba(181, 206, 223, 0.1);
+	
+}
+
 #sidebar #course-links
 {
 	margin-left:0;
