--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -27,9 +27,9 @@ body.boxes
 //	background: radial-gradient(circle, rgba(134,215,255,0.2511379551820728) 0%, rgba(164,183,205,0.1474964985994398) 100%);
 //background: rgb(124,187,232);
 //background: linear-gradient(90deg, rgba(124,187,232,0.5032387955182073) 0%, rgba(217,218,216,0.1474964985994398) 100%);
-background: rgb(181,206,223);
+//background: rgb(181,206,223);
 //background: linear-gradient(90deg, rgba(181,206,223,0.14637605042016806) 0%, rgba(200,218,223,0.1474964985994398) 100%);
-background: linear-gradient(133deg, rgba(181,206,223,0.34637605042016806) 0%, rgba(183,184,183,0.1474964985994398) 80%);
+//background: linear-gradient(133deg, rgba(181,206,223,0.34637605042016806) 0%, rgba(183,184,183,0.1474964985994398) 80%);
 	
 }
 
@@ -45,7 +45,7 @@ background: linear-gradient(133deg, rgba(181,206,223,0.34637605042016806) 0%, rg
 {
 	#sidebar
 	{
-		border-right:1px solid #E9ECF3;
+//		border-right:1px solid #E9ECF3;
 	}
 }
 
