--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -7,6 +7,7 @@
 	font-size: 0.9rem;
 	display:flex;
 	flex-wrap:nowrap;
+	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);
 }
 
 #sidebar-content
@@ -40,6 +41,11 @@
 	border-radius:0.25rem;
 }
 
+.navbar-brand:hover
+{
+//	background: linear-gradient(90deg, #D0B5EC 0%, #FEF00A 100%);
+}
+
 #course-title
 {
 	min-width:0;
@@ -67,7 +73,7 @@
 #sidebar-tools
 {
 	background-color:rgba(181, 206, 223, 0.1);
-	
+//	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);
 }
 
 #sidebar #course-links
@@ -75,6 +81,7 @@
 	margin-left:0;
 	margin-right:0;
 	background-color:rgba(181, 206, 223, 0.1);
+//	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);
 	padding:0.35rem 0.15rem;
 }
 
