--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -203,6 +203,7 @@
 {
 	color:#235A9E;
 	background-color:#DFE3E6;
+	background: linear-gradient(50deg, #FCDFBD 0%, #FCDCC1 100%);
 	text-decoration:none;
 }
 
