--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -87,7 +87,7 @@
 
 	<%# All pages by section, but users only see "published" pages here %>
 
-	<% if current_sections.any? %>
+	<% if current_schedule.blank? && current_sections.any? %>
 	<ul id="sections" class="nav">
 		<li>
 			<p class="nav-text"><%= @current_module ? t(:other) : t(:materials) %></p>
