--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -10,6 +10,11 @@ body.boxes
 	background-color:var(--light);
 }
 
+.navbar-brand svg
+{
+	background-color: #ffc28f;
+}
+
 .navbar-dark .brand
 {
 	color:#ffffff;
