--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -1,5 +1,5 @@
-<div class="dropdown ml-2">
-	<a href="#" class="rounded-pill px-2 py-1 dropdown-toggle d-inline-block h-100" style="background-color:#DBE6EC" data-toggle="dropdown"><%= bootstrap_icon 'person-fill', size: '24x24', style: 'vertical-align:-0.255em;' %></a>
+<div class="dropdown mr-2 d-flex align-items-center">
+	<a href="#" class=" dropdown-toggle d-inline-block m-0 p-2" style="sbackground-color:#DBE6EC" data-toggle="dropdown"><%= bootstrap_icon 'person-fill', size: '24x24', style: 'vertical-align:-0.255em;' %></a>
 	<% if authenticated? %>
 	<div class="dropdown-menu dropdown-menu-right" id="user-menu">
 		<%= render partial: 'menu_items' %>
