--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,6 +1,14 @@
-<div id="sidebar-tools" class="flex-shrink-0">
+<div id="sidebar-tools" class="flex-shrink-0" style="z-index:10000">
 	<%= render 'brand'%>
-	<button class="navbar-toggler border-0 px-0" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
+	<% if !authenticated? %>
+	<li class=" d-block d-md-none"><%= link_to("Sign in".html_safe, session_login_path, class:"d-inline-block", data: { turbolinks: false })%></li>
+	<% else #if logged_in? %>
+	<div class="d-block d-md-none ">
+	<%= render 'menu' %>
+	</div>
+	<% end %>
+	
+	<button class="navbar-toggler border-0 px-0" type="button" data-toggle="collapse" data-target="#sidebar-content,#course-links" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 </div>
@@ -102,7 +110,7 @@
 
 	<%# User menu items are shown in sidebar on small screens %>
 
-	<ul id="user-menu-sidebar" class="nav d-md-none">
+	<!-- <ul id="user-menu-sidebar" class="nav d-md-none">
 		<li>
 			<p class="nav-text">Menu</p>
 		</li>
@@ -111,11 +119,11 @@
 		<% elsif logged_in? %>
 		<%= render partial: 'menu_items' %>
 		<% end %>
-	</ul>
+	</ul> -->
 
 </div>
 
-<div id="course-links" class="flex-shrink-0 row">
+<div id="course-links" class="flex-shrink-0 row sidebar-collapse collapse">
 	<% if logged_in? && alerts_for_current_schedule.any? %>
 		<div style="flex:1 0 0; min-width:0"><a href="/announcements" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'bell-fill' %><br><small><%= t(:announcements) %></small></a></div>
 	<% end %>
