--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -36,7 +36,7 @@
 
 
 
-section p, section details
+section p
 {
 	margin-top:1em;
 }
@@ -51,7 +51,7 @@ section dl
 	margin:1em 2em;
 }
 
-section ul li, section ol li, section ol a, section ul a
+section ul li, section ol li, section ol a, section ul a, section details
 {
 	margin-bottom:0.25em;
 }
