fix responsive sidebar + menu

--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -221,7 +221,7 @@
 	padding-bottom:0.35rem;
 }
 
-#sidebar p.nav-text, #sidebar a.dropdown-toggle {
+#sidebar p.nav-text {
 	margin:0.15rem 0 0.15rem 0;
 	color:#a5a5a5;
 }
