--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,6 +1,6 @@
 <div id="search" class="dropdown form-inline">
-	<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-light w-100" placeholder="Find student" aria-label="Find student">
-	<div id="search-results" class="dropdown-menu"></div>
+	<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm w-100s" placeholder="Find student" aria-label="Find student">
+	<div id="search-results" class="dropdown-menu dropdown-menu-right"></div>
 </div>
 <script>
 	$('#student-search').on('paste input', function(e) {
