--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -41,6 +41,11 @@ body.boxes
 	}
 }
 
+#row-content .bg-light
+{
+	background-color:#f1efee !important;
+}
+
 @media (max-width: 767.98px)
 {
 	.brand
