--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 				</div>
 				<% end %>
 
-				<div id="float-nav" class="clearfix d-none d-md-block navbar-expand sticky-top p-3 pt-4">
+				<div id="float-nav" class="clearfix d-none d-md-block navbar-expand sticky-top p-3">
 					<div class="float-md-right">
 					<%= render 'float_nav' %>
 					</div>
