--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -115,3 +115,8 @@ body.boxes
 {
     background-color: #ff9966;
 }
+
+#profile-dialog .modal-header
+{
+	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);	
+}
