--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -13,6 +13,12 @@
 <% end %>
 
 <% content_for :footer do %>
+	<script>
+		$(document).on('turbolinks:load', function() {
+			if(MathJax.typeset)
+				MathJax.typeset();
+		});
+	</script>
 	<%= render 'footer' %>
 <% end %>
 
