zoom link support

--- a/app/views/admin/site/_settings.html.erb
+++ b/app/views/admin/site/_settings.html.erb
@@ -1,6 +1,7 @@
 <%= toggle_setting_form('hands_allow', 'Enable student question queue') %>
 <%= toggle_setting_form('hands_location', 'Ask for location') %>
 <%= toggle_setting_form('hands_bumper', 'Force location when local') %>
+<%= toggle_setting_form('hands_link', 'Require video link instead of location') %>
 <%= toggle_setting_form('hands_groups', 'Always show group name in help list') %>
 
 <hr>
