--- a/app/views/admin/site/_settings.html.erb
+++ b/app/views/admin/site/_settings.html.erb
@@ -3,9 +3,9 @@
 <%= toggle_setting_form('hands_bumper', 'Force location when local') %>
 <%= toggle_setting_form('hands_link', 'Require video link instead of location') %>
 <%= toggle_setting_form('hands_groups', 'Always show group name in help list') %>
+<%= toggle_setting_form('hands_show_non_questions', 'Show people who haven\'t asked questions for a while') %>
 
 <hr>
 
 <%= toggle_setting_form('room_for_toc', 'Make room for table of contents') %>
 <%= toggle_setting_form('pages_enable_math', 'Enable MathJax') %>
-
