--- a/app/views/hands/hands/index.html.erb
+++ b/app/views/hands/hands/index.html.erb
@@ -20,7 +20,7 @@
 	<% end %>
 
 
-	<% if @long_time_users.any? %>
+	<% if @long_time_users.any? && Settings.hands_show_non_questions %>
 	<% @long_time_users.each do |user| %>
 	<%= link_to(new_hand_path(user_id: user.id), class: 'list-group-item') do %>
 	<%= user.name %>
